fixed list alignment

--- a/frontend/src/components/CreateProject/CreateProject.scss
+++ b/frontend/src/components/CreateProject/CreateProject.scss
@@ -59,17 +59,16 @@
           padding: 0 1.5rem 0 0;
 
           li {
-            padding: 0 1.5rem 0 0;
+            padding: 0 3.5rem 0 0;
 
-            &:nth-child(2) {
-              margin-right: 1rem;
+            .ql-ui::before {
+              margin-right: -1.2em !important;
             }
           }
         }
       }
       .ql-font,
       .ql-align,
-      .ql-list,
       .ql-code-block {
         display: none !important;
       }
